// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Order Creation and Trading Flow Event Closure Tests should close the event for resolution 1`] = `{}`;

exports[`Order Creation and Trading Flow Event Closure Tests should verify event is closed and no longer accepting trades 1`] = `
{
  "_id": "DEV-000069",
  "code": "DEV-000069",
  "collections": [],
  "description": "Test event for resolve functionality #826436",
  "ends_at": "2025-11-02T12:37:25.198Z",
  "event_images_url": [
    "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
  ],
  "name": "Resolve Test Event 826436",
  "og_image_url": "",
  "outcomes": [
    {
      "_id": "A",
      "description": null,
      "event_id": "DEV-000069",
      "name": "Team A Wins",
      "trader_info": {
        "estimated_payout": 76.9,
        "estimated_probability": 0.49976691658857436,
        "event_id": "DEV-000069",
        "event_outcome_id": "A",
        "max_leverage": 3,
        "max_pledge": 132.5,
        "max_wager": 132.5,
        "min_pledge": 10,
        "min_wager": 10,
        "timestamp": "[DYNAMIC_TIMESTAMP]",
      },
    },
    {
      "_id": "B",
      "description": null,
      "event_id": "DEV-000069",
      "name": "Team B Wins",
      "trader_info": {
        "estimated_payout": 76.7,
        "estimated_probability": 0.5002330834114256,
        "event_id": "DEV-000069",
        "event_outcome_id": "B",
        "max_leverage": 3,
        "max_pledge": 132.5,
        "max_wager": 132.5,
        "min_pledge": 10,
        "min_wager": 10,
        "timestamp": "[DYNAMIC_TIMESTAMP]",
      },
    },
  ],
  "participants_count": 6,
  "recommended_images_url": [],
  "rules": "Standard trading rules apply",
  "status": "closed",
  "stream_url": "",
  "tags": [],
  "ticker": "RESOLVETEST826436",
  "top_event_images_url": [],
  "volume": 60,
}
`;

exports[`Order Creation and Trading Flow Event Resolution Tests should resolve the event with outcome A as winner 1`] = `{}`;

exports[`Order Creation and Trading Flow Event Resolution Tests should verify event status changed to resolved 1`] = `
{
  "_id": "DEV-000069",
  "code": "DEV-000069",
  "collections": [],
  "description": "Test event for resolve functionality #826436",
  "ends_at": "2025-10-03T12:39:00.000Z",
  "event_images_url": [
    "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
  ],
  "name": "Resolve Test Event 826436",
  "og_image_url": "",
  "outcomes": [
    {
      "_id": "A",
      "description": null,
      "event_id": "DEV-000069",
      "name": "Team A Wins",
      "trader_info": {
        "estimated_payout": 76.9,
        "estimated_probability": 1,
        "event_id": "DEV-000069",
        "event_outcome_id": "A",
        "max_leverage": 1,
        "max_pledge": null,
        "max_wager": null,
        "min_pledge": null,
        "min_wager": null,
        "timestamp": "[DYNAMIC_TIMESTAMP]",
      },
    },
    {
      "_id": "B",
      "description": null,
      "event_id": "DEV-000069",
      "name": "Team B Wins",
      "trader_info": {
        "estimated_payout": null,
        "estimated_probability": 0,
        "event_id": "DEV-000069",
        "event_outcome_id": "B",
        "max_leverage": 1,
        "max_pledge": null,
        "max_wager": null,
        "min_pledge": null,
        "min_wager": null,
        "timestamp": "[DYNAMIC_TIMESTAMP]",
      },
    },
  ],
  "participants_count": 6,
  "recommended_images_url": [],
  "rules": "Standard trading rules apply",
  "status": "resolved",
  "stream_url": "",
  "tags": [],
  "ticker": "RESOLVETEST826436",
  "top_event_images_url": [],
  "volume": 60,
}
`;

exports[`Order Creation and Trading Flow Post-Resolution User Positions should verify final user positions after resolution: final-user-positions-1032220499@tcetmumbai.in 1`] = `
{
  "0": {
    "created_at": "[DYNAMIC_TIMESTAMP]",
    "current_probability": 1,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000069",
      "code": "DEV-000069",
      "description": "Test event for resolve functionality #826436",
      "ends_at": "2025-10-03T12:39:00.000Z",
      "event_images_url": [
        "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
      ],
      "name": "Resolve Test Event 826436",
      "resolved_outcome_id": "A",
      "status": "inactive",
      "ticker": "RESOLVETEST826436",
    },
    "event_id": "DEV-000069",
    "event_images_url": [
      "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
    ],
    "event_status": "resolved",
    "fill_count": 0,
    "final_indicative_return": 76.9,
    "indicative_payout": 0,
    "indicative_pnl": 0,
    "indicative_return": 0,
    "is_leveraged": false,
    "last_update_time": "2025-10-03T12:37:37.967820909Z",
    "payout_return_for_new_wagers": 76.9,
    "pledge": 20,
    "positions": [
      {
        "created_at": "[DYNAMIC_TIMESTAMP]",
        "current_probability": 1,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000069",
          "code": "DEV-000069",
          "description": "Test event for resolve functionality #826436",
          "ends_at": "2025-10-03T12:39:00.000Z",
          "event_images_url": [
            "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
          ],
          "name": "Resolve Test Event 826436",
          "resolved_outcome_id": "A",
          "status": "inactive",
          "ticker": "RESOLVETEST826436",
        },
        "event_id": "DEV-000069",
        "event_outcome": {
          "_id": "68dfc3856f99642ceefd4865",
          "description": null,
          "event_id": "68dfc3856f99642ceefd485b",
          "index": 0,
          "name": "Team A Wins",
        },
        "event_outcome_id": "A",
        "final_indicative_return": 76.9,
        "id": "[DYNAMIC_ID]",
        "is_leveraged": false,
        "last_reason": "WIN",
        "last_update_time": "2025-10-03T12:37:37.967820909Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 76.9,
        "pledge": 10,
        "probability": 1,
        "probability_change": null,
        "realized_payoff": 18.01,
        "realized_payout": 8.01,
        "realized_pnl": 8.01,
        "realized_return": 80.10000000000001,
        "stop_distance": 0,
        "stop_warning": false,
        "type": "closed",
        "user_id": "68df4dbaf4bbd61ada70a267",
        "wager": 10,
        "wager_id": "187",
        "wager_position_id": "187",
        "wagered_at": "2025-10-03T12:37:37.967820909Z",
      },
      {
        "created_at": "[DYNAMIC_TIMESTAMP]",
        "current_probability": 0,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000069",
          "code": "DEV-000069",
          "description": "Test event for resolve functionality #826436",
          "ends_at": "2025-10-03T12:39:00.000Z",
          "event_images_url": [
            "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
          ],
          "name": "Resolve Test Event 826436",
          "resolved_outcome_id": "A",
          "status": "inactive",
          "ticker": "RESOLVETEST826436",
        },
        "event_id": "DEV-000069",
        "event_outcome": {
          "_id": "68dfc3856f99642ceefd486b",
          "description": null,
          "event_id": "68dfc3856f99642ceefd485b",
          "index": 1,
          "name": "Team B Wins",
        },
        "event_outcome_id": "B",
        "final_indicative_return": 0,
        "id": "[DYNAMIC_ID]",
        "is_leveraged": false,
        "last_reason": "LOSS",
        "last_update_time": "2025-10-03T12:37:37.967820909Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 0,
        "pledge": 10,
        "probability": 0,
        "probability_change": null,
        "realized_payoff": 0,
        "realized_payout": 0,
        "realized_pnl": -10,
        "realized_return": -100,
        "stop_distance": 0,
        "stop_warning": false,
        "type": "closed",
        "user_id": "68df4dbaf4bbd61ada70a267",
        "wager": 10,
        "wager_id": "188",
        "wager_position_id": "188",
        "wagered_at": "2025-10-03T12:37:37.967820909Z",
      },
    ],
    "probability_change": null,
    "realized_payoff": 18.01,
    "realized_payout": 8.01,
    "realized_pnl": -1.9900000000000002,
    "realized_return": -19.89999999999999,
    "trader_id": "T-LYEZ1K",
    "type": "closed",
    "user_id": "68df4dbaf4bbd61ada70a267",
    "wager": 20,
    "wagered_at": "2025-10-03T12:37:37.967820909Z",
  },
}
`;

exports[`Order Creation and Trading Flow Post-Resolution User Positions should verify final user positions after resolution: final-user-positions-dny9136833946@gmail.com 1`] = `
{
  "0": {
    "created_at": "[DYNAMIC_TIMESTAMP]",
    "current_probability": 1,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000069",
      "code": "DEV-000069",
      "description": "Test event for resolve functionality #826436",
      "ends_at": "2025-10-03T12:39:00.000Z",
      "event_images_url": [
        "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
      ],
      "name": "Resolve Test Event 826436",
      "resolved_outcome_id": "A",
      "status": "inactive",
      "ticker": "RESOLVETEST826436",
    },
    "event_id": "DEV-000069",
    "event_images_url": [
      "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
    ],
    "event_status": "resolved",
    "fill_count": 0,
    "final_indicative_return": 76.9,
    "indicative_payout": 0,
    "indicative_pnl": 0,
    "indicative_return": 0,
    "is_leveraged": false,
    "last_update_time": "2025-10-03T12:37:37.967820909Z",
    "payout_return_for_new_wagers": 76.9,
    "pledge": 20,
    "positions": [
      {
        "created_at": "[DYNAMIC_TIMESTAMP]",
        "current_probability": 1,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000069",
          "code": "DEV-000069",
          "description": "Test event for resolve functionality #826436",
          "ends_at": "2025-10-03T12:39:00.000Z",
          "event_images_url": [
            "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
          ],
          "name": "Resolve Test Event 826436",
          "resolved_outcome_id": "A",
          "status": "inactive",
          "ticker": "RESOLVETEST826436",
        },
        "event_id": "DEV-000069",
        "event_outcome": {
          "_id": "68dfc3856f99642ceefd4865",
          "description": null,
          "event_id": "68dfc3856f99642ceefd485b",
          "index": 0,
          "name": "Team A Wins",
        },
        "event_outcome_id": "A",
        "final_indicative_return": 76.9,
        "id": "[DYNAMIC_ID]",
        "is_leveraged": false,
        "last_reason": "WIN",
        "last_update_time": "2025-10-03T12:37:37.967820909Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 76.9,
        "pledge": 10,
        "probability": 1,
        "probability_change": null,
        "realized_payoff": 17.86,
        "realized_payout": 7.86,
        "realized_pnl": 7.86,
        "realized_return": 78.60000000000001,
        "stop_distance": 0,
        "stop_warning": false,
        "type": "closed",
        "user_id": "68dbf1fafcf9e51637f518be",
        "wager": 10,
        "wager_id": "185",
        "wager_position_id": "185",
        "wagered_at": "2025-10-03T12:37:37.967820909Z",
      },
      {
        "created_at": "[DYNAMIC_TIMESTAMP]",
        "current_probability": 0,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000069",
          "code": "DEV-000069",
          "description": "Test event for resolve functionality #826436",
          "ends_at": "2025-10-03T12:39:00.000Z",
          "event_images_url": [
            "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
          ],
          "name": "Resolve Test Event 826436",
          "resolved_outcome_id": "A",
          "status": "inactive",
          "ticker": "RESOLVETEST826436",
        },
        "event_id": "DEV-000069",
        "event_outcome": {
          "_id": "68dfc3856f99642ceefd486b",
          "description": null,
          "event_id": "68dfc3856f99642ceefd485b",
          "index": 1,
          "name": "Team B Wins",
        },
        "event_outcome_id": "B",
        "final_indicative_return": 0,
        "id": "[DYNAMIC_ID]",
        "is_leveraged": false,
        "last_reason": "LOSS",
        "last_update_time": "2025-10-03T12:37:37.967820909Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 0,
        "pledge": 10,
        "probability": 0,
        "probability_change": null,
        "realized_payoff": 0,
        "realized_payout": 0,
        "realized_pnl": -10,
        "realized_return": -100,
        "stop_distance": 0,
        "stop_warning": false,
        "type": "closed",
        "user_id": "68dbf1fafcf9e51637f518be",
        "wager": 10,
        "wager_id": "186",
        "wager_position_id": "186",
        "wagered_at": "2025-10-03T12:37:37.967820909Z",
      },
    ],
    "probability_change": null,
    "realized_payoff": 17.86,
    "realized_payout": 7.86,
    "realized_pnl": -2.1399999999999997,
    "realized_return": -21.39999999999999,
    "trader_id": "T-48OCYR",
    "type": "closed",
    "user_id": "68dbf1fafcf9e51637f518be",
    "wager": 20,
    "wagered_at": "2025-10-03T12:37:37.967820909Z",
  },
}
`;

exports[`Order Creation and Trading Flow Post-Resolution User Positions should verify final user positions after resolution: final-user-positions-yadavdeepak5112001@gmail.com 1`] = `
{
  "0": {
    "created_at": "[DYNAMIC_TIMESTAMP]",
    "current_probability": 1,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000069",
      "code": "DEV-000069",
      "description": "Test event for resolve functionality #826436",
      "ends_at": "2025-10-03T12:39:00.000Z",
      "event_images_url": [
        "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
      ],
      "name": "Resolve Test Event 826436",
      "resolved_outcome_id": "A",
      "status": "inactive",
      "ticker": "RESOLVETEST826436",
    },
    "event_id": "DEV-000069",
    "event_images_url": [
      "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
    ],
    "event_status": "resolved",
    "fill_count": 0,
    "final_indicative_return": 76.9,
    "indicative_payout": 0,
    "indicative_pnl": 0,
    "indicative_return": 0,
    "is_leveraged": false,
    "last_update_time": "2025-10-03T12:37:37.967820909Z",
    "payout_return_for_new_wagers": 76.9,
    "pledge": 20,
    "positions": [
      {
        "created_at": "[DYNAMIC_TIMESTAMP]",
        "current_probability": 1,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000069",
          "code": "DEV-000069",
          "description": "Test event for resolve functionality #826436",
          "ends_at": "2025-10-03T12:39:00.000Z",
          "event_images_url": [
            "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
          ],
          "name": "Resolve Test Event 826436",
          "resolved_outcome_id": "A",
          "status": "inactive",
          "ticker": "RESOLVETEST826436",
        },
        "event_id": "DEV-000069",
        "event_outcome": {
          "_id": "68dfc3856f99642ceefd4865",
          "description": null,
          "event_id": "68dfc3856f99642ceefd485b",
          "index": 0,
          "name": "Team A Wins",
        },
        "event_outcome_id": "A",
        "final_indicative_return": 76.9,
        "id": "[DYNAMIC_ID]",
        "is_leveraged": false,
        "last_reason": "WIN",
        "last_update_time": "2025-10-03T12:37:37.967820909Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 76.9,
        "pledge": 10,
        "probability": 1,
        "probability_change": null,
        "realized_payoff": 18.13,
        "realized_payout": 8.13,
        "realized_pnl": 8.13,
        "realized_return": 81.3,
        "stop_distance": 0,
        "stop_warning": false,
        "type": "closed",
        "user_id": "68dbf3eefcf9e51637f518c1",
        "wager": 10,
        "wager_id": "189",
        "wager_position_id": "189",
        "wagered_at": "2025-10-03T12:37:37.967820909Z",
      },
      {
        "created_at": "[DYNAMIC_TIMESTAMP]",
        "current_probability": 0,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000069",
          "code": "DEV-000069",
          "description": "Test event for resolve functionality #826436",
          "ends_at": "2025-10-03T12:39:00.000Z",
          "event_images_url": [
            "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
          ],
          "name": "Resolve Test Event 826436",
          "resolved_outcome_id": "A",
          "status": "inactive",
          "ticker": "RESOLVETEST826436",
        },
        "event_id": "DEV-000069",
        "event_outcome": {
          "_id": "68dfc3856f99642ceefd486b",
          "description": null,
          "event_id": "68dfc3856f99642ceefd485b",
          "index": 1,
          "name": "Team B Wins",
        },
        "event_outcome_id": "B",
        "final_indicative_return": 0,
        "id": "[DYNAMIC_ID]",
        "is_leveraged": false,
        "last_reason": "LOSS",
        "last_update_time": "2025-10-03T12:37:37.967820909Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 0,
        "pledge": 10,
        "probability": 0,
        "probability_change": null,
        "realized_payoff": 0,
        "realized_payout": 0,
        "realized_pnl": -10,
        "realized_return": -100,
        "stop_distance": 0,
        "stop_warning": false,
        "type": "closed",
        "user_id": "68dbf3eefcf9e51637f518c1",
        "wager": 10,
        "wager_id": "190",
        "wager_position_id": "190",
        "wagered_at": "2025-10-03T12:37:37.967820909Z",
      },
    ],
    "probability_change": null,
    "realized_payoff": 18.13,
    "realized_payout": 8.13,
    "realized_pnl": -1.8699999999999992,
    "realized_return": -18.700000000000003,
    "trader_id": "T-6094YB",
    "type": "closed",
    "user_id": "68dbf3eefcf9e51637f518c1",
    "wager": 20,
    "wagered_at": "2025-10-03T12:37:37.967820909Z",
  },
}
`;

exports[`Order Creation and Trading Flow Pre-Resolution User Positions should verify event is still open for trading 1`] = `
{
  "_id": "DEV-000069",
  "code": "DEV-000069",
  "collections": [],
  "description": "Test event for resolve functionality #826436",
  "ends_at": "2025-11-02T12:37:25.198Z",
  "event_images_url": [
    "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
  ],
  "name": "Resolve Test Event 826436",
  "og_image_url": "",
  "outcomes": [
    {
      "_id": "A",
      "description": null,
      "event_id": "DEV-000069",
      "name": "Team A Wins",
      "trader_info": {
        "estimated_payout": 76.9,
        "estimated_probability": 0.49976691658857436,
        "event_id": "DEV-000069",
        "event_outcome_id": "A",
        "max_leverage": 3,
        "max_pledge": 132.5,
        "max_wager": 132.5,
        "min_pledge": 10,
        "min_wager": 10,
        "timestamp": "[DYNAMIC_TIMESTAMP]",
      },
    },
    {
      "_id": "B",
      "description": null,
      "event_id": "DEV-000069",
      "name": "Team B Wins",
      "trader_info": {
        "estimated_payout": 76.7,
        "estimated_probability": 0.5002330834114256,
        "event_id": "DEV-000069",
        "event_outcome_id": "B",
        "max_leverage": 3,
        "max_pledge": 132.5,
        "max_wager": 132.5,
        "min_pledge": 10,
        "min_wager": 10,
        "timestamp": "[DYNAMIC_TIMESTAMP]",
      },
    },
  ],
  "participants_count": 6,
  "recommended_images_url": [],
  "rules": "Standard trading rules apply",
  "status": "open",
  "stream_url": "",
  "tags": [],
  "ticker": "RESOLVETEST826436",
  "top_event_images_url": [],
  "volume": 60,
}
`;

exports[`Order Creation and Trading Flow Pre-Resolution User Positions should verify user positions after wagers are placed: user-positions-1032220499@tcetmumbai.in 1`] = `
{
  "0": {
    "created_at": "[DYNAMIC_TIMESTAMP]",
    "current_probability": 0.49976691658857436,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000069",
      "code": "DEV-000069",
      "description": "Test event for resolve functionality #826436",
      "ends_at": "2025-11-02T12:37:25.198Z",
      "event_images_url": [
        "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
      ],
      "name": "Resolve Test Event 826436",
      "resolved_outcome_id": null,
      "status": "active",
      "ticker": "RESOLVETEST826436",
    },
    "event_id": "DEV-000069",
    "event_images_url": [
      "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
    ],
    "event_status": "open",
    "fill_count": 0,
    "final_indicative_return": 76.9,
    "indicative_payout": 15.49,
    "indicative_pnl": 15.49,
    "indicative_return": 154.9,
    "is_leveraged": false,
    "last_update_time": "2025-10-03T12:37:37.717027749Z",
    "payout_return_for_new_wagers": 76.9,
    "pledge": 20,
    "positions": [
      {
        "created_at": "[DYNAMIC_TIMESTAMP]",
        "current_probability": 0.49976691658857436,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000069",
          "code": "DEV-000069",
          "description": "Test event for resolve functionality #826436",
          "ends_at": "2025-11-02T12:37:25.198Z",
          "event_images_url": [
            "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
          ],
          "name": "Resolve Test Event 826436",
          "resolved_outcome_id": null,
          "status": "active",
          "ticker": "RESOLVETEST826436",
        },
        "event_id": "DEV-000069",
        "event_outcome": {
          "_id": "68dfc3856f99642ceefd4865",
          "description": null,
          "event_id": "68dfc3856f99642ceefd485b",
          "index": 0,
          "name": "Team A Wins",
        },
        "event_outcome_id": "A",
        "final_indicative_return": 76.9,
        "id": "[DYNAMIC_ID]",
        "indicative_payout": 7.68,
        "indicative_pnl": 7.68,
        "indicative_return": 76.8,
        "is_leveraged": false,
        "last_reason": null,
        "last_update_time": "2025-10-03T12:37:37.620477985Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 76.9,
        "pledge": 10,
        "probability": 0.49976691658857436,
        "probability_change": null,
        "stop_distance": 0,
        "stop_probability": 0,
        "stop_warning": false,
        "type": "open",
        "user_id": "68df4dbaf4bbd61ada70a267",
        "wager": 10,
        "wager_id": "DEV-000069_A",
        "wager_position_id": "DEV-000069_A",
        "wagered_at": "2025-10-03T12:37:37.620477985Z",
      },
      {
        "created_at": "[DYNAMIC_TIMESTAMP]",
        "current_probability": 0.5002330834114256,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000069",
          "code": "DEV-000069",
          "description": "Test event for resolve functionality #826436",
          "ends_at": "2025-11-02T12:37:25.198Z",
          "event_images_url": [
            "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
          ],
          "name": "Resolve Test Event 826436",
          "resolved_outcome_id": null,
          "status": "active",
          "ticker": "RESOLVETEST826436",
        },
        "event_id": "DEV-000069",
        "event_outcome": {
          "_id": "68dfc3856f99642ceefd486b",
          "description": null,
          "event_id": "68dfc3856f99642ceefd485b",
          "index": 1,
          "name": "Team B Wins",
        },
        "event_outcome_id": "B",
        "final_indicative_return": 76.7,
        "id": "[DYNAMIC_ID]",
        "indicative_payout": 7.8100000000000005,
        "indicative_pnl": 7.8100000000000005,
        "indicative_return": 78.10000000000001,
        "is_leveraged": false,
        "last_reason": null,
        "last_update_time": "2025-10-03T12:37:37.717027749Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 76.7,
        "pledge": 10,
        "probability": 0.5002330834114256,
        "probability_change": null,
        "stop_distance": 0,
        "stop_probability": 0,
        "stop_warning": false,
        "type": "open",
        "user_id": "68df4dbaf4bbd61ada70a267",
        "wager": 10,
        "wager_id": "DEV-000069_B",
        "wager_position_id": "DEV-000069_B",
        "wagered_at": "2025-10-03T12:37:37.717027749Z",
      },
    ],
    "probability_change": null,
    "realized_payout": 0,
    "realized_pnl": 0,
    "realized_return": 0,
    "trader_id": "T-LYEZ1K",
    "type": "open",
    "user_id": "68df4dbaf4bbd61ada70a267",
    "wager": 20,
    "wagered_at": "2025-10-03T12:37:37.717027749Z",
  },
}
`;

exports[`Order Creation and Trading Flow Pre-Resolution User Positions should verify user positions after wagers are placed: user-positions-dny9136833946@gmail.com 1`] = `
{
  "0": {
    "created_at": "[DYNAMIC_TIMESTAMP]",
    "current_probability": 0.49976691658857436,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000069",
      "code": "DEV-000069",
      "description": "Test event for resolve functionality #826436",
      "ends_at": "2025-11-02T12:37:25.198Z",
      "event_images_url": [
        "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
      ],
      "name": "Resolve Test Event 826436",
      "resolved_outcome_id": null,
      "status": "active",
      "ticker": "RESOLVETEST826436",
    },
    "event_id": "DEV-000069",
    "event_images_url": [
      "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
    ],
    "event_status": "open",
    "fill_count": 0,
    "final_indicative_return": 76.9,
    "indicative_payout": 15.21,
    "indicative_pnl": 15.21,
    "indicative_return": 152.10000000000002,
    "is_leveraged": false,
    "last_update_time": "2025-10-03T12:37:37.549459014Z",
    "payout_return_for_new_wagers": 76.9,
    "pledge": 20,
    "positions": [
      {
        "created_at": "[DYNAMIC_TIMESTAMP]",
        "current_probability": 0.49976691658857436,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000069",
          "code": "DEV-000069",
          "description": "Test event for resolve functionality #826436",
          "ends_at": "2025-11-02T12:37:25.198Z",
          "event_images_url": [
            "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
          ],
          "name": "Resolve Test Event 826436",
          "resolved_outcome_id": null,
          "status": "active",
          "ticker": "RESOLVETEST826436",
        },
        "event_id": "DEV-000069",
        "event_outcome": {
          "_id": "68dfc3856f99642ceefd4865",
          "description": null,
          "event_id": "68dfc3856f99642ceefd485b",
          "index": 0,
          "name": "Team A Wins",
        },
        "event_outcome_id": "A",
        "final_indicative_return": 76.9,
        "id": "[DYNAMIC_ID]",
        "indicative_payout": 7.54,
        "indicative_pnl": 7.54,
        "indicative_return": 75.4,
        "is_leveraged": false,
        "last_reason": null,
        "last_update_time": "2025-10-03T12:37:37.483421483Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 76.9,
        "pledge": 10,
        "probability": 0.49976691658857436,
        "probability_change": null,
        "stop_distance": 0,
        "stop_probability": 0,
        "stop_warning": false,
        "type": "open",
        "user_id": "68dbf1fafcf9e51637f518be",
        "wager": 10,
        "wager_id": "DEV-000069_A",
        "wager_position_id": "DEV-000069_A",
        "wagered_at": "2025-10-03T12:37:37.483421483Z",
      },
      {
        "created_at": "[DYNAMIC_TIMESTAMP]",
        "current_probability": 0.5002330834114256,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000069",
          "code": "DEV-000069",
          "description": "Test event for resolve functionality #826436",
          "ends_at": "2025-11-02T12:37:25.198Z",
          "event_images_url": [
            "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
          ],
          "name": "Resolve Test Event 826436",
          "resolved_outcome_id": null,
          "status": "active",
          "ticker": "RESOLVETEST826436",
        },
        "event_id": "DEV-000069",
        "event_outcome": {
          "_id": "68dfc3856f99642ceefd486b",
          "description": null,
          "event_id": "68dfc3856f99642ceefd485b",
          "index": 1,
          "name": "Team B Wins",
        },
        "event_outcome_id": "B",
        "final_indicative_return": 76.7,
        "id": "[DYNAMIC_ID]",
        "indicative_payout": 7.67,
        "indicative_pnl": 7.67,
        "indicative_return": 76.7,
        "is_leveraged": false,
        "last_reason": null,
        "last_update_time": "2025-10-03T12:37:37.549459014Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 76.7,
        "pledge": 10,
        "probability": 0.5002330834114256,
        "probability_change": null,
        "stop_distance": 0,
        "stop_probability": 0,
        "stop_warning": false,
        "type": "open",
        "user_id": "68dbf1fafcf9e51637f518be",
        "wager": 10,
        "wager_id": "DEV-000069_B",
        "wager_position_id": "DEV-000069_B",
        "wagered_at": "2025-10-03T12:37:37.549459014Z",
      },
    ],
    "probability_change": null,
    "realized_payout": 0,
    "realized_pnl": 0,
    "realized_return": 0,
    "trader_id": "T-48OCYR",
    "type": "open",
    "user_id": "68dbf1fafcf9e51637f518be",
    "wager": 20,
    "wagered_at": "2025-10-03T12:37:37.549459014Z",
  },
}
`;

exports[`Order Creation and Trading Flow Pre-Resolution User Positions should verify user positions after wagers are placed: user-positions-yadavdeepak5112001@gmail.com 1`] = `
{
  "0": {
    "created_at": "[DYNAMIC_TIMESTAMP]",
    "current_probability": 0.49976691658857436,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000069",
      "code": "DEV-000069",
      "description": "Test event for resolve functionality #826436",
      "ends_at": "2025-11-02T12:37:25.198Z",
      "event_images_url": [
        "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
      ],
      "name": "Resolve Test Event 826436",
      "resolved_outcome_id": null,
      "status": "active",
      "ticker": "RESOLVETEST826436",
    },
    "event_id": "DEV-000069",
    "event_images_url": [
      "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
    ],
    "event_status": "open",
    "fill_count": 0,
    "final_indicative_return": 76.9,
    "indicative_payout": 15.740000000000002,
    "indicative_pnl": 15.740000000000002,
    "indicative_return": 157.4,
    "is_leveraged": false,
    "last_update_time": "2025-10-03T12:37:37.851587993Z",
    "payout_return_for_new_wagers": 76.9,
    "pledge": 20,
    "positions": [
      {
        "created_at": "[DYNAMIC_TIMESTAMP]",
        "current_probability": 0.49976691658857436,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000069",
          "code": "DEV-000069",
          "description": "Test event for resolve functionality #826436",
          "ends_at": "2025-11-02T12:37:25.198Z",
          "event_images_url": [
            "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
          ],
          "name": "Resolve Test Event 826436",
          "resolved_outcome_id": null,
          "status": "active",
          "ticker": "RESOLVETEST826436",
        },
        "event_id": "DEV-000069",
        "event_outcome": {
          "_id": "68dfc3856f99642ceefd4865",
          "description": null,
          "event_id": "68dfc3856f99642ceefd485b",
          "index": 0,
          "name": "Team A Wins",
        },
        "event_outcome_id": "A",
        "final_indicative_return": 76.9,
        "id": "[DYNAMIC_ID]",
        "indicative_payout": 7.8100000000000005,
        "indicative_pnl": 7.8100000000000005,
        "indicative_return": 78.10000000000001,
        "is_leveraged": false,
        "last_reason": null,
        "last_update_time": "2025-10-03T12:37:37.783059605Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 76.9,
        "pledge": 10,
        "probability": 0.49976691658857436,
        "probability_change": null,
        "stop_distance": 0,
        "stop_probability": 0,
        "stop_warning": false,
        "type": "open",
        "user_id": "68dbf3eefcf9e51637f518c1",
        "wager": 10,
        "wager_id": "DEV-000069_A",
        "wager_position_id": "DEV-000069_A",
        "wagered_at": "2025-10-03T12:37:37.783059605Z",
      },
      {
        "created_at": "[DYNAMIC_TIMESTAMP]",
        "current_probability": 0.5002330834114256,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000069",
          "code": "DEV-000069",
          "description": "Test event for resolve functionality #826436",
          "ends_at": "2025-11-02T12:37:25.198Z",
          "event_images_url": [
            "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759495045198-charts.jpg",
          ],
          "name": "Resolve Test Event 826436",
          "resolved_outcome_id": null,
          "status": "active",
          "ticker": "RESOLVETEST826436",
        },
        "event_id": "DEV-000069",
        "event_outcome": {
          "_id": "68dfc3856f99642ceefd486b",
          "description": null,
          "event_id": "68dfc3856f99642ceefd485b",
          "index": 1,
          "name": "Team B Wins",
        },
        "event_outcome_id": "B",
        "final_indicative_return": 76.7,
        "id": "[DYNAMIC_ID]",
        "indicative_payout": 7.930000000000001,
        "indicative_pnl": 7.930000000000001,
        "indicative_return": 79.3,
        "is_leveraged": false,
        "last_reason": null,
        "last_update_time": "2025-10-03T12:37:37.851587993Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 76.7,
        "pledge": 10,
        "probability": 0.5002330834114256,
        "probability_change": null,
        "stop_distance": 0,
        "stop_probability": 0,
        "stop_warning": false,
        "type": "open",
        "user_id": "68dbf3eefcf9e51637f518c1",
        "wager": 10,
        "wager_id": "DEV-000069_B",
        "wager_position_id": "DEV-000069_B",
        "wagered_at": "2025-10-03T12:37:37.851587993Z",
      },
    ],
    "probability_change": null,
    "realized_payout": 0,
    "realized_pnl": 0,
    "realized_return": 0,
    "trader_id": "T-6094YB",
    "type": "open",
    "user_id": "68dbf3eefcf9e51637f518c1",
    "wager": 20,
    "wagered_at": "2025-10-03T12:37:37.851587993Z",
  },
}
`;

exports[`Order Creation and Trading Flow Quote Generation Tests should create a wager on outcome A for user 1 1`] = `
{
  "created_at": "[DYNAMIC_TIMESTAMP]",
  "eventId": "68dfc3856f99642ceefd485b",
  "eventOutcomeId": "68dfc3856f99642ceefd4865",
  "id": "[DYNAMIC_ID]",
  "leverage": 1,
  "pledge": 10,
  "wager": 10,
}
`;

exports[`Order Creation and Trading Flow Quote Generation Tests should create a wager on outcome A for user 2 1`] = `
{
  "created_at": "[DYNAMIC_TIMESTAMP]",
  "eventId": "68dfc3856f99642ceefd485b",
  "eventOutcomeId": "68dfc3856f99642ceefd4865",
  "id": "[DYNAMIC_ID]",
  "leverage": 1,
  "pledge": 10,
  "wager": 10,
}
`;

exports[`Order Creation and Trading Flow Quote Generation Tests should create a wager on outcome A for user 3 1`] = `
{
  "created_at": "[DYNAMIC_TIMESTAMP]",
  "eventId": "68dfc3856f99642ceefd485b",
  "eventOutcomeId": "68dfc3856f99642ceefd4865",
  "id": "[DYNAMIC_ID]",
  "leverage": 1,
  "pledge": 10,
  "wager": 10,
}
`;

exports[`Order Creation and Trading Flow Quote Generation Tests should create a wager on outcome B for user 1 1`] = `
{
  "created_at": "[DYNAMIC_TIMESTAMP]",
  "eventId": "68dfc3856f99642ceefd485b",
  "eventOutcomeId": "68dfc3856f99642ceefd486b",
  "id": "[DYNAMIC_ID]",
  "leverage": 1,
  "pledge": 10,
  "wager": 10,
}
`;

exports[`Order Creation and Trading Flow Quote Generation Tests should create a wager on outcome B for user 2 1`] = `
{
  "created_at": "[DYNAMIC_TIMESTAMP]",
  "eventId": "68dfc3856f99642ceefd485b",
  "eventOutcomeId": "68dfc3856f99642ceefd486b",
  "id": "[DYNAMIC_ID]",
  "leverage": 1,
  "pledge": 10,
  "wager": 10,
}
`;

exports[`Order Creation and Trading Flow Quote Generation Tests should create a wager on outcome B for user 3 1`] = `
{
  "created_at": "[DYNAMIC_TIMESTAMP]",
  "eventId": "68dfc3856f99642ceefd485b",
  "eventOutcomeId": "68dfc3856f99642ceefd486b",
  "id": "[DYNAMIC_ID]",
  "leverage": 1,
  "pledge": 10,
  "wager": 10,
}
`;

exports[`Order Creation and Trading Flow Quote Generation Tests should generate quote for user 1 on outcome A 1`] = `
{
  "after_return": null,
  "before_return": null,
  "current_probability": 0.5,
  "event_id": "DEV-000069",
  "event_outcome_id": "A",
  "expires_at": null,
  "indicative_payout": 7.63,
  "indicative_payout_rate": 76.3,
  "indicative_return": 76.3,
  "leverage": 1,
  "loan": 0,
  "max_leverage": 1,
  "max_pledge": 125,
  "max_wager": 125,
  "min_pledge": 10,
  "min_wager": 10,
  "new_probability": 0.5097092964400183,
  "outcome_indicative_return": 76.3,
  "pledge": 10,
  "probability_change": 0.009709296440018278,
  "stop_probability": 0,
  "wager": 10,
}
`;

exports[`Order Creation and Trading Flow Quote Generation Tests should generate quote for user 1 on outcome B 1`] = `
{
  "after_return": null,
  "before_return": null,
  "current_probability": 0.4902907035599816,
  "event_id": "DEV-000069",
  "event_outcome_id": "B",
  "expires_at": null,
  "indicative_payout": 7.92,
  "indicative_payout_rate": 79.2,
  "indicative_return": 79.2,
  "leverage": 1,
  "loan": 0,
  "max_leverage": 1,
  "max_pledge": 125,
  "max_wager": 125,
  "min_pledge": 10,
  "min_wager": 10,
  "new_probability": 0.5000906288151309,
  "outcome_indicative_return": 79.2,
  "pledge": 10,
  "probability_change": 0.009799925255149278,
  "stop_probability": 0,
  "wager": 10,
}
`;

exports[`Order Creation and Trading Flow Quote Generation Tests should generate quote for user 2 on outcome A 1`] = `
{
  "after_return": null,
  "before_return": null,
  "current_probability": 0.49990937118486906,
  "event_id": "DEV-000069",
  "event_outcome_id": "A",
  "expires_at": null,
  "indicative_payout": 7.65,
  "indicative_payout_rate": 76.5,
  "indicative_return": 76.5,
  "leverage": 1,
  "loan": 0,
  "max_leverage": 1,
  "max_pledge": 127.5,
  "max_wager": 127.5,
  "min_pledge": 10,
  "min_wager": 10,
  "new_probability": 0.5092481306226883,
  "outcome_indicative_return": 76.5,
  "pledge": 10,
  "probability_change": 0.0093387594378192,
  "stop_probability": 0,
  "wager": 10,
}
`;

exports[`Order Creation and Trading Flow Quote Generation Tests should generate quote for user 2 on outcome B 1`] = `
{
  "after_return": null,
  "before_return": null,
  "current_probability": 0.49075186937731174,
  "event_id": "DEV-000069",
  "event_outcome_id": "B",
  "expires_at": null,
  "indicative_payout": 7.930000000000001,
  "indicative_payout_rate": 79.3,
  "indicative_return": 79.3,
  "leverage": 1,
  "loan": 0,
  "max_leverage": 1,
  "max_pledge": 127.5,
  "max_wager": 127.5,
  "min_pledge": 10,
  "min_wager": 10,
  "new_probability": 0.50016774900007,
  "outcome_indicative_return": 79.3,
  "pledge": 10,
  "probability_change": 0.00941587962275825,
  "stop_probability": 0,
  "wager": 10,
}
`;

exports[`Order Creation and Trading Flow Quote Generation Tests should generate quote for user 3 on outcome A 1`] = `
{
  "after_return": null,
  "before_return": null,
  "current_probability": 0.49983225099993,
  "event_id": "DEV-000069",
  "event_outcome_id": "A",
  "expires_at": null,
  "indicative_payout": 7.67,
  "indicative_payout_rate": 76.7,
  "indicative_return": 76.7,
  "leverage": 1,
  "loan": 0,
  "max_leverage": 2,
  "max_pledge": 130,
  "max_wager": 130,
  "min_pledge": 10,
  "min_wager": 10,
  "new_probability": 0.5088149930645887,
  "outcome_indicative_return": 76.7,
  "pledge": 10,
  "probability_change": 0.008982742064658655,
  "stop_probability": 0,
  "wager": 10,
}
`;

exports[`Order Creation and Trading Flow Quote Generation Tests should generate quote for user 3 on outcome B 1`] = `
{
  "after_return": null,
  "before_return": null,
  "current_probability": 0.4911850069354114,
  "event_id": "DEV-000069",
  "event_outcome_id": "B",
  "expires_at": null,
  "indicative_payout": 7.930000000000001,
  "indicative_payout_rate": 79.3,
  "indicative_return": 79.3,
  "leverage": 1,
  "loan": 0,
  "max_leverage": 2,
  "max_pledge": 130,
  "max_wager": 130,
  "min_pledge": 10,
  "min_wager": 10,
  "new_probability": 0.5002330834114256,
  "outcome_indicative_return": 79.3,
  "pledge": 10,
  "probability_change": 0.009048076476014189,
  "stop_probability": 0,
  "wager": 10,
}
`;

exports[`Order Creation and Trading Flow User Authentication Tests should generate token for user 1 (dny9136833946@gmail.com) 1`] = `
{
  "token": "[DYNAMIC_JWT_TOKEN]",
}
`;

exports[`Order Creation and Trading Flow User Authentication Tests should generate token for user 2 (1032220499@tcetmumbai.in) 1`] = `
{
  "token": "[DYNAMIC_JWT_TOKEN]",
}
`;

exports[`Order Creation and Trading Flow User Authentication Tests should generate token for user 3 (yadavdeepak5112001@gmail.com) 1`] = `
{
  "token": "[DYNAMIC_JWT_TOKEN]",
}
`;

exports[`Order Creation and Trading Flow Wallet Information Tests should get wallet info for user 1 1`] = `
{
  "balances": {
    "bonus": 0,
    "profit": 39.44,
    "topup": 930,
    "total": 969.44,
    "withdrawable": 969.44,
  },
  "success": true,
  "trader_id": "T-48OCYR",
  "wallets": {
    "bonus": {
      "balance": 0,
      "currency": "USDT",
      "id": "[DYNAMIC_ID]",
      "last_transaction_at": null,
    },
    "profit": {
      "balance": 39.44,
      "currency": "USDT",
      "id": "[DYNAMIC_ID]",
      "last_transaction_at": "2025-10-03T12:30:00.000Z",
    },
    "topup": {
      "balance": 930,
      "currency": "USDT",
      "id": "[DYNAMIC_ID]",
      "last_transaction_at": "2025-10-03T12:30:00.000Z",
    },
  },
}
`;

exports[`Order Creation and Trading Flow Wallet Information Tests should get wallet info for user 2 1`] = `
{
  "balances": {
    "bonus": 0,
    "profit": 10032.04,
    "topup": 920,
    "total": 10952.04,
    "withdrawable": 10952.04,
  },
  "success": true,
  "trader_id": "T-LYEZ1K",
  "wallets": {
    "bonus": {
      "balance": 0,
      "currency": "USDT",
      "id": "[DYNAMIC_ID]",
      "last_transaction_at": null,
    },
    "profit": {
      "balance": 10032.04,
      "currency": "USDT",
      "id": "[DYNAMIC_ID]",
      "last_transaction_at": "2025-10-03T12:30:00.000Z",
    },
    "topup": {
      "balance": 920,
      "currency": "USDT",
      "id": "[DYNAMIC_ID]",
      "last_transaction_at": "2025-10-03T12:30:00.000Z",
    },
  },
}
`;

exports[`Order Creation and Trading Flow Wallet Information Tests should get wallet info for user 3 1`] = `
{
  "balances": {
    "bonus": 0,
    "profit": 32.52,
    "topup": 930,
    "total": 962.52,
    "withdrawable": 962.52,
  },
  "success": true,
  "trader_id": "T-6094YB",
  "wallets": {
    "bonus": {
      "balance": 0,
      "currency": "USDT",
      "id": "[DYNAMIC_ID]",
      "last_transaction_at": null,
    },
    "profit": {
      "balance": 32.52,
      "currency": "USDT",
      "id": "[DYNAMIC_ID]",
      "last_transaction_at": "2025-10-03T12:30:00.000Z",
    },
    "topup": {
      "balance": 930,
      "currency": "USDT",
      "id": "[DYNAMIC_ID]",
      "last_transaction_at": "2025-10-03T12:30:00.000Z",
    },
  },
}
`;
